# restimulator

./: CMakeLists.txt  README.md
src/: cameracapturethread.cpp  cameracapturethread.h  formmain.h  global.cpp  global.h  guithread.cpp  guithread.h  ithread.cpp  ithread.h  main.cpp  opencvfunctions.cpp  opencvfunctions.h  posedetectorthread.cpp  posedetectorthread.h  posekeypointdata.cpp  posekeypointdata.h  restimconnection.cpp  restimconnection.h  restimtcpconnection.cpp  restimtcpconnection.h  tcodegenerator.cpp  tcodegenerator.h
